--- a/about/index.html
+++ b/about/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>11ty Starter Site - About us</title>
-    <link rel="modulepreload" href="/static/main.js">
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="modulepreload" href="https://benoss.github.io/session-calculator/static/main.js">
+    <link rel="stylesheet" href="https://benoss.github.io/session-calculator/static/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
     
 
@@ -17,7 +17,7 @@
 <meta property="og:site_name" content="11ty Starter Site">
 <meta property="og:title" content="About us">
 <meta property="og:description" content="this is our about page.">
-<meta property="og:url" content="http://localhost:8080/about/">
+<meta property="og:url" content="https://benoss.github.io/session-calculator/about/">
 <meta property="og:locale" content="en">
 
 
@@ -62,7 +62,7 @@
 
 </footer>
 
-    <script type="module" src="/static/main.js"></script>
+    <script type="module" src="https://benoss.github.io/session-calculator/static/main.js"></script>
     
   </body>
 </html>
